--- a/www/package.json
+++ b/www/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "copy-webpack-plugin": "^12.0.2",
     "webpack": "^5.90.2",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "snake_game": "file:../pkg"
   },
   "devDependencies": {
     "webpack-dev-server": "^5.0.1"
