--- a/www/package.json
+++ b/www/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server",
+    "dev": "webpack serve",
     "build": "webpack build"
   },
   "keywords": [],
@@ -12,9 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "copy-webpack-plugin": "^12.0.2",
+    "snake_game": "file:..\\pkg",
     "webpack": "^5.90.2",
-    "webpack-cli": "^5.1.4",
-    "snake_game": "file:../pkg"
+    "webpack-cli": "^5.1.4"
   },
   "devDependencies": {
     "webpack-dev-server": "^5.0.1"
