--- a/www/package.json
+++ b/www/package.json
@@ -17,6 +17,8 @@
     "webpack-cli": "^5.1.4"
   },
   "devDependencies": {
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
     "webpack-dev-server": "^5.0.1"
   }
 }
